# Rust-Web-Programming

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
app/: .env  Cargo.toml  Dockerfile  config.yaml  entrypoint.sh  state.json
app/migrations/2024-08-10-145009_create_to_do_items/: up.sql
app/migrations/2024-08-23-140114_create_users/: down.sql  up.sql
app/src/: config.rs  database.rs  json_serialization.rs  jwt.rs  main.rs  schema.rs  views.rs
app/src/json_serialization/: to_do_items.rs
app/src/models/item/: item.rs  new_item.rs
app/src/models/user/: new_user.rs  user.rs
app/src/templates/: main.html
app/src/to_do/: create.rs  mod.rs
app/src/to_do/structs/: done.rs  pending.rs
app/src/views/: mod.rs  users.rs
app/src/views/app/: content_loader.rs  items.rs
app/src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
app/src/views/users/: create.rs
db/: Dockerfile
src/: .main.rs.swp  main.rs  processes.rs  state.json  state.rs
src/json_serialization/: to_do_items.rs
src/to_do/: .create.rs.swo  .create.rs.swp  enums.rs  mod.rs
src/to_do/structs/: done.rs  pending.rs
src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/app/: items.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: .get.rs.swp  edit.rs  mod.rs
